<resources>
    <string name="app_name">RVT</string>
    <string name="checkbox_id">checkbox id</string>
    <string-array name="country_array">
        <item>  Afghanistan</item>
        <item>	Albania	</item>
        <item>	Algeria	</item>
        <item>	Andorra	</item>
        <item>	Angola	</item>
        <item>	Antigua and Barbuda	</item>
        <item>	Argentina	</item>
        <item>	Armenia	</item>
        <item>	Aruba	</item>
        <item>	Australia	</item>
        <item>	Austria	</item>
        <item>	Azerbaijan	</item>
        <item>	Bahamas, The	</item>
        <item>	Bahrain	</item>
        <item>	Bangladesh	</item>
        <item>	Barbados	</item>
        <item>	Belarus	</item>
        <item>	Belgium	</item>
        <item>	Belize	</item>
        <item>	Benin	</item>
        <item>	Bhutan	</item>
        <item>	Bolivia	</item>
        <item>	Bosnia and Herzegovina	</item>
        <item>	Botswana	</item>
        <item>	Brazil	</item>
        <item>	Brunei 	</item>
        <item>	Bulgaria	</item>
        <item>	Burkina Faso	</item>
        <item>	Burma	</item>
        <item>	Burundi	</item>
        <item>	Cambodia	</item>
        <item>	Cameroon	</item>
        <item>	Canada	</item>
        <item>	Cabo Verde	</item>
        <item>	Central African Republic	</item>
        <item>	Chad	</item>
        <item>	Chile	</item>
        <item>	China	</item>
        <item>	Colombia	</item>
        <item>	Comoros	</item>
        <item>	Congo, Democratic Republic of the	</item>
        <item>	Congo, Republic of the	</item>
        <item>	Costa Rica	</item>
        <item>	Cote d\'Ivoire	</item>
        <item>	Croatia	</item>
        <item>	Cuba	</item>
        <item>	Curacao	</item>
        <item>	Cyprus	</item>
        <item>	Czechia	</item>
        <item>	Denmark	</item>
        <item>	Djibouti	</item>
        <item>	Dominica	</item>
        <item>	Dominican Republic	</item>
        <item>	East Timor	</item>
        <item>	Ecuador	</item>
        <item>	Egypt	</item>
        <item>	El Salvador	</item>
        <item>	Equatorial Guinea	</item>
        <item>	Eritrea	</item>
        <item>	Estonia	</item>
        <item>	Ethiopia	</item>
        <item>	Fiji	</item>
        <item>	Finland	</item>
        <item>	France	</item>
        <item>	Gabon	</item>
        <item>	Gambia, The	</item>
        <item>	Georgia	</item>
        <item>	Germany	</item>
        <item>	Ghana	</item>
        <item>	Greece	</item>
        <item>	Grenada	</item>
        <item>	Guatemala	</item>
        <item>	Guinea	</item>
        <item>	Guinea-Bissau	</item>
        <item>	Guyana	</item>
        <item>	Haiti	</item>
        <item>	Holy See	</item>
        <item>	Honduras	</item>
        <item>	Hong Kong	</item>
        <item>	Hungary	</item>
        <item>	Iceland	</item>
        <item>	India	</item>
        <item>	Indonesia	</item>
        <item>	Iran	</item>
        <item>	Iraq	</item>
        <item>	Ireland	</item>
        <item>	Israel	</item>
        <item>	Italy	</item>
        <item>	Jamaica	</item>
        <item>	Japan	</item>
        <item>	Jordan	</item>
        <item>	Kazakhstan	</item>
        <item>	Kenya	</item>
        <item>	Kiribati	</item>
        <item>	Korea, North	</item>
        <item>	Korea, South	</item>
        <item>	Kosovo	</item>
        <item>	Kuwait	</item>
        <item>	Kyrgyzstan	</item>
        <item>	Laos	</item>
        <item>	Latvia	</item>
        <item>	Lebanon	</item>
        <item>	Lesotho	</item>
        <item>	Liberia	</item>
        <item>	Libya	</item>
        <item>	Liechtenstein	</item>
        <item>	Lithuania	</item>
        <item>	Luxembourg	</item>
        <item>	Macau	</item>
        <item>	Macedonia	</item>
        <item>	Madagascar	</item>
        <item>	Malawi	</item>
        <item>	Malaysia	</item>
        <item>	Maldives	</item>
        <item>	Mali	</item>
        <item>	Malta	</item>
        <item>	Marshall Islands	</item>
        <item>	Mauritania	</item>
        <item>	Mauritius	</item>
        <item>	Mexico	</item>
        <item>	Micronesia	</item>
        <item>	Moldova	</item>
        <item>	Monaco	</item>
        <item>	Mongolia	</item>
        <item>	Montenegro	</item>
        <item>	Morocco	</item>
        <item>	Mozambique	</item>
        <item>	Namibia	</item>
        <item>	Nauru	</item>
        <item>	Nepal	</item>
        <item>	Netherlands	</item>
        <item>	New Zealand	</item>
        <item>	Nicaragua	</item>
        <item>	Niger	</item>
        <item>	Nigeria	</item>
        <item>	North Korea	</item>
        <item>	Norway	</item>
        <item>	Oman	</item>
        <item>	Other Country/Region	</item>
        <item>	Pakistan	</item>
        <item>	Palau	</item>
        <item>	Palestinian Territories	</item>
        <item>	Panama	</item>
        <item>	Papua New Guinea	</item>
        <item>	Paraguay	</item>
        <item>	Peru	</item>
        <item>	Philippines	</item>
        <item>	Poland	</item>
        <item>	Portugal	</item>
        <item>	Qatar	</item>
        <item>	Romania	</item>
        <item>	Russia	</item>
        <item>	Rwanda	</item>
        <item>	Saint Kitts and Nevis	</item>
        <item>	Saint Lucia	</item>
        <item>	Saint Vincent and the Grenadines	</item>
        <item>	Samoa 	</item>
        <item>	San Marino	</item>
        <item>	Sao Tome and Principe	</item>
        <item>	Saudi Arabia	</item>
        <item>	Senegal	</item>
        <item>	Serbia	</item>
        <item>	Seychelles	</item>
        <item>	Sierra Leone	</item>
        <item>	Singapore	</item>
        <item>	Sint Maarten	</item>
        <item>	Slovakia	</item>
        <item>	Slovenia	</item>
        <item>	Solomon Islands	</item>
        <item>	Somalia	</item>
        <item>	South Africa	</item>
        <item>	South Korea	</item>
        <item>	South Sudan	</item>
        <item>	Spain	</item>
        <item>	Sri Lanka	</item>
        <item>	Sudan	</item>
        <item>	Suriname	</item>
        <item>	Swaziland	</item>
        <item>	Sweden	</item>
        <item>	Switzerland	</item>
        <item>	Syria	</item>
        <item>	Taiwan	</item>
        <item>	Tajikistan	</item>
        <item>	Tanzania	</item>
        <item>	Thailand	</item>
        <item>	Timor-Leste	</item>
        <item>	Togo	</item>
        <item>	Tonga	</item>
        <item>	Trinidad and Tobago	</item>
        <item>	Tunisia	</item>
        <item>	Turkey	</item>
        <item>	Turkmenistan	</item>
        <item>	Tuvalu	</item>
        <item>	Uganda	</item>
        <item>	Ukraine	</item>
        <item>	United Arab Emirates	</item>
        <item>	United Kingdom	</item>
        <item>	Uruguay	</item>
        <item>	Uzbekistan	</item>
        <item>	Vanuatu	</item>
        <item>	Venezuela	</item>
        <item>	Vietnam	</item>
        <item>	Yemen	</item>
        <item>	Zambia	</item>
        <item>	Zimbabwe 	</item>
    </string-array>
    <string-array name="language_array">
        
        <item>English</item>
        
    </string-array>
    <string name="about_this_app">About This Tool</string>
    <string name="sign_up_button">Sign up</string>
    <string name="login_button">login</string>
    <string name="surveyor_login_button">Surveyor login</string>
    <string name="date_hint">Date</string>
    <string name="respondent_group_hint">Respondent group</string>
    <string name="surveyor_hint">Surveyor</string>
    <string name="community_hint">Community</string>
    <string name="district_hint">District</string>
    <string name="state_hint">State</string>
    <string name="survey_hint">Survey #</string>
    <string name="passcode_hint">Passcode</string>
    <string name="admin_login_button">Admin login</string>
    <string name="button_save">Save</string>
    <string name="projection_time_frame_heading">Projection time frame</string>
    <string name="time_frame_qstn1">Year for which you want to calculate Net Preset value</string>
    <string name="time_frame_qstn2">Year you would like your projection to start from</string>
    <string name="time_frame_qstn3">Number of years to project</string>
    <string name="string_forestland">Forestry</string>
    <string name="string_pastureland">Grazing</string>
    <string name="string_miningland">Mining</string>
    <string name="string_cropland">Agriculture</string>
    <string name="heading_survey_login">survey login</string>
    <string name="string_occupation">Occupation</string>
    <string name="string_age">Age</string>
    <string name="string_years_of_education">Years of education</string>
    <string name="name_of_participant">Name of participant</string>
    <string name="button_cancel">Cancel</string>
    <string name="string_survey_id">Survey ID</string>
    <string name="string_start_survey">Start Survey</string>
    <string name="string_logout">Logout</string>
    <string name="shared_costs_outlays">Shared Costs</string>
    <string name="string_certificate">Certificate</string>
</resources>