<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <LinearLayout
        android:elevation="3dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <TextView
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="22dp"
            android:text="@string/heading_survey_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:hint="@string/surveyor_hint"
        android:layout_width="300dp"
        android:textSize="@dimen/textfield_size"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_surveyor"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="300dp"
        android:hint="@string/community_hint"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/textfield_size"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_community"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="300dp"
        android:gravity="center"
        android:hint="@string/survey_hint"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:textSize="@dimen/textfield_size"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_survey"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_marginTop="50dp"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textColor="@android:color/white"
        android:text="@string/login_button"
        android:id="@+id/button_login"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"
            android:layout_marginRight="50dp"
            android:background="@android:color/transparent"
            android:id="@+id/button_sign_up"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="2dp"
            android:background="@android:color/darker_gray"
            android:layout_height="40dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@android:color/transparent"
            android:text="@string/admin_login_button"
            android:id="@+id/button_admin_login"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</LinearLayout>
