<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="320dp"

    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#1d8c83"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#146b63"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/drawer_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:id="@+id/text_view_survey_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_survey_id"
            android:textColor="#ffffff"
            android:textSize="@dimen/textfield_size" />

        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="0000"
            android:layout_marginBottom="25dp"
            android:textColor="#ffffff"
            android:textSize="40sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingLeft="20dp"
                android:text="@string/about_this_app"
                android:textColor="#ffffff"
                android:textSize="@dimen/navbar_item_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:id="@+id/text_start_survey"
                android:text="@string/string_start_survey"
                android:textColor="#ffffff"
                android:textSize="@dimen/navbar_item_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:id="@+id/text_harvesting_forest_products"
                android:text="@string/string_forestland"
                android:textColor="#ffffff"
                android:textSize="@dimen/navbar_item_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:id="@+id/text_agriculture"
                android:text="@string/string_cropland"
                android:textColor="#ffffff"
                android:textSize="@dimen/navbar_item_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:id="@+id/text_grazing"
                android:text="@string/string_pastureland"
                android:textColor="#ffffff"
                android:textSize="@dimen/navbar_item_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:id="@+id/text_mining"
                android:text="@string/string_miningland"
                android:textColor="#ffffff"
                android:textSize="@dimen/navbar_item_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:id="@+id/text_shared_costs_outlays"
                android:text="@string/shared_costs_outlays"
                android:textColor="#ffffff"
                android:textSize="@dimen/navbar_item_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:id="@+id/text_certificate"
                android:text="@string/string_certificate"
                android:textColor="#ffffff"
                android:textSize="@dimen/navbar_item_text" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:text="@string/string_logout"
                android:textColor="#ffffff"
                android:textSize="@dimen/navbar_item_text" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>