<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edittext_date"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:onClick="setDate"
                android:textSize="@dimen/textfield_size"
                android:layout_gravity="center_horizontal"
                android:hint="@string/date_hint" />

            <EditText
                android:id="@+id/edittext_respondent_group"
                android:layout_width="300dp"
                android:textSize="@dimen/textfield_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/respondent_group_hint" />

            <EditText
                android:id="@+id/edittext_surveyor"
                android:layout_width="300dp"
                android:textSize="@dimen/textfield_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/surveyor_hint" />

            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="300dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner_currency"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="300dp"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:hint="Currency" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_community"
                android:layout_width="300dp"
                android:textSize="@dimen/textfield_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/community_hint" />

            <EditText
                android:id="@+id/edittext_district"
                android:layout_width="300dp"
                android:textSize="@dimen/textfield_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/district_hint" />

            <EditText
                android:id="@+id/edittext_state"
                android:layout_width="300dp"
                android:textSize="@dimen/textfield_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/state_hint" />

            <Spinner
                android:id="@+id/spinner_country"
                android:layout_width="300dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_sign_up"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up_button" />

    <Button
        android:background="@android:color/transparent"
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/login_button" />
</LinearLayout>
