<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sayone.omidyar.view.ProjectionTimeFrameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/projection_time_frame_heading"
        android:textSize="@dimen/heading_size"
        android:layout_gravity="center"
        android:id="@+id/textView4"/>

    <View
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textfield_size"
        android:layout_marginTop="20dp"
        android:text="@string/time_frame_qstn1"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:id="@+id/spinner_year1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="@dimen/textfield_size"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/time_frame_qstn2"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:id="@+id/spinner_year2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textfield_size"
        android:text="@string/time_frame_qstn3"
        android:layout_marginTop="20dp"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:layout_width="200dp"
        android:gravity="center"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_year3"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
